# Robust-Trajectory-Tracking-for-Quadrotor-UAVs-using-Sliding-Mode-Control

./: CMakeLists.txt  README.md  TrajectoryGeneration.m  package.xml
scripts/: controller.py  visualize.py
